# SLAVA_Platform

./: README.md  app.py  metrics_table.xlsx  pyproject.toml  requirements.txt
src/: config.py  streamlit_app.py
src/core/: metrics.py  metrics_helpers.py  metrics_utils.py  preprocessing.py  sdamgia_parser.py  visualize.py
