[tool.poetry]
name = "slava-platform"
version = "0.1.0"
description = "SLAVA is a platform for evaluating LLMs using parsed datasets, where data is extracted, cleaned, and validated before being analyzed with various performance metrics."
authors = ["Andrey, Eric, Rinat"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fuzzywuzzy = "^0.18.0"
streamlit = "^1.40.2"
scikit-learn = "^1.6.0"
pytest = "^8.3.4"
black = "^24.10.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
sdamgia = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
